[package]
name = "arkadia"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
num = "0.4.3"
rand = "*"

[dev-dependencies]
rand = "*"
kdtree = "0.7.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
